[package]
name = "ludum-dare-45"
version = "0.1.0"
authors = ["sigod <sigod.mail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
euclid = {version = "0.20", features=["mint"]}
fern = {version = "0.5", features = ["colored"] }
ggez = "0.5"
ggez-goodies = "0.5"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
specs-derive = "0.4"
toml = "0.5"
warmy = "0.13"
